[package]
name = "libgssapi-sys"
version = "0.3.3"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A low level binding to gssapi"
readme = "../README.md"
homepage = "https://github.com/estokes/libgssapi"
documentation = "https://docs.rs/libgssapi"
repository = "https://github.com/estokes/libgssapi"
keywords = ["gssapi", "sspi", "kerberos", "krb5", "authentication"]
categories = ["api-bindings", "authentication", "cryptography", "os::unix-apis"]
links = "gssapi_krb5"

[features]
vendored = ["krb5-src"]

[dependencies]
krb5-src = { version = "0.3.4", optional = true }

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"
